# iot-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
account-manager/: Cargo.toml
covid19/: Cargo.toml
covid19/src/: config.rs
covid19/src/covid19/: model.rs  presenter.rs
general/: Cargo.toml
general/src/: config.rs  main.rs
general/src/openai/: mod.rs  model.rs  presenter.rs
iot-manager/: Cargo.toml
iot-manager/migration/: V1__create_devices_table.sql  V2__create_sensors_table.sql
iot-manager/src/: config.rs  main.rs
iot-manager/src/device/: mod.rs  model.rs  model_test.rs  presenter.rs
iot-manager/src/sensor/: mod.rs  model.rs  presenter.rs
src/: config.rs  main.rs
src/covid19/: model.rs  presenter.rs
tool/: Cargo.toml
tool/src/: main.rs
