[package]
name = "iot-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
awc = { version = "3" }
postgres = "0.19.9"
lazy_static = "1.4.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
